--- a/_posts/mathematiques/2014-07-23-XXVIII-3.md
+++ b/_posts/mathematiques/2014-07-23-XXVIII-3.md
@@ -152,7 +152,7 @@ section: mathematiques
 <div class="solution">
 
 Можно заметить, что 3-и человека за три дня сидя за одним столом выполнят все условия, указанные в задаче для данной тройки.
-123, 231, 312 других вариантов нет. Теперь первому надо посидеть с другой парой и т.д., так как пар 4, то потребуется 3*4=12 дней.
+123, 231, 312, других вариантов нет. Теперь первому надо посидеть с другой парой и т.д., так как пар 4, то потребуется 3*4=12 дней.
 
 Ответ: 12.</div>
 
