--- a/_posts/2013-11-16-isomorph.md
+++ b/_posts/2013-11-16-isomorph.md
@@ -4,104 +4,274 @@ title: Изоморфизм в графах
 author: Ivan Reshetnikov
 ---
 
-_Рассматривается эвристический алгоритм проверки графов на изоморфность. Проведён анализ работы алгоритма и проверка корректности на персональном компьютере._
+_Рассматривается эвристический алгоритм проверки графов на изоморфность. Проведён анализ работы алгоритма и проверка
+корректности на персональном компьютере._
 
 Граф или неориентированный граф G — это упорядоченная пара G := (V,E), для которой выполнены следующие условия:
 
 * V это непустое множество вершин или узлов,
 * E это множество пар (в случае неориентированного графа — неупорядоченных) вершин, называемых рёбрами.
 
-Один из способов представления графов – матрица смежности. Пусть граф имеет N вершин. Тогда матрица смежности будет иметь размер N x N, где значение ячейки в i-ой строке и j-ом столбце равно единице в случае достижимости j-ой вершины из i-той через одно ребро или нулю, если i-ая вершина не связана ребром с j-ой вершиной.
+Один из способов представления графов – матрица смежности. Пусть граф имеет N вершин. Тогда матрица смежности будет
+иметь размер N x N, где значение ячейки в i-ой строке и j-ом столбце равно единице в случае достижимости j-ой вершины
+из i-той через одно ребро или нулю, если i-ая вершина не связана ребром с j-ой вершиной.
 
-Граф G называется изоморфным графу H, если существует биекция f из множества вершин графа G в множество вершин графа H, обладающая следующим свойством: если в графе G есть ребро из вершины A в вершину B, то в графе H должно быть ребро из вершины f(A) в вершину f(B) и наоборот — если в графе H есть ребро из вершины A в вершину B, то в графе G должно быть ребро из вершины f − 1(A) в вершину f − 1(B). В случае ориентированного графа эта биекция также должна сохранять ориентацию ребра. В случае взвешенного графа биекция также должна сохранять вес ребра. Здесь будут рассмотрены только неориентированные невзвешенные графы.
+Граф G называется изоморфным графу H, если существует биекция f из множества вершин графа G в множество вершин графа H,
+обладающая следующим свойством: если в графе G есть ребро из вершины A в вершину B, то в графе H должно быть ребро из
+вершины f(A) в вершину f(B) и наоборот — если в графе H есть ребро из вершины A в вершину B, то в графе G должно быть
+ребро из вершины f − 1(A) в вершину f − 1(B). В случае ориентированного графа эта биекция также должна сохранять
+ориентацию ребра. В случае взвешенного графа биекция также должна сохранять вес ребра. Здесь будут рассмотрены только
+неориентированные невзвешенные графы.
 
-h4. Полный перебор
+### Полный перебор
 
-Находятся все перестановки вершин одного из графов. Для каждой перестановки сравниваются множества рёбер графов. Если хотя бы одна перестановка даст полное совпадение множеств рёбер – графы изоморфны.
+Находятся все перестановки вершин одного из графов. Для каждой перестановки сравниваются множества рёбер графов.
+Если хотя бы одна перестановка даст полное совпадение множеств рёбер – графы изоморфны.
 
-Оптимизация для частных случаев. Очевидно, что нет смысла ставить в соответствие вершины с различными степенями. Тогда перестановки будем делать только для вершин с одинаковыми степенями
+Оптимизация для частных случаев. Очевидно, что нет смысла ставить в соответствие вершины с различными степенями.
+Тогда перестановки будем делать только для вершин с одинаковыми степенями
 
-bq. Степень вершины – количество рёбер, содержащих данную вершину.
+> Степень вершины – количество рёбер, содержащих данную вершину.
 
-h4. Эвристический алгоритм проверки графов на изоморфность
+### Эвристический алгоритм проверки графов на изоморфность
 
-Алгоритм использует одно из свойств матрицы смежности. Значение в ячейке (i, j) показывает количество различных путей, содержащих ровно одно ребро, по которым можно попасть из i-ой вершины в j-ую вершину. При возведении матрицы в N-ую степень значение в ячейке (i, j) будет показывать количество различных путей длиной в N рёбер, по которым можно попасть из i-ой вершины в j-ую вершину.
+Алгоритм использует одно из свойств матрицы смежности. Значение в ячейке (i, j) показывает количество различных путей,
+содержащих ровно одно ребро, по которым можно попасть из i-ой вершины в j-ую вершину. При возведении матрицы в N-ую
+степень значение в ячейке (i, j) будет показывать количество различных путей длиной в N рёбер, по которым можно попасть
+из i-ой вершины в j-ую вершину.
 
-bq. Путь в графе G = (V,E) — последовательность вершин  при v ~i~ принадлежащем к V при i = 1, …, k, таких, что две любые последовательные вершины соединены хотя бы одной дугой из E.
+> Путь в графе G = (V,E) — последовательность вершин  при $$v_i$$ принадлежащем к V при i = 1, …, k, таких,
+> что две любые последовательные вершины соединены хотя бы одной дугой из E.
 
 Введём несколько понятий.
 
-_Уникальная характеристика ребра_ – набор из N чисел, которые показывают количество путей ведущих из одной вершины ребра в другую вершину ребра и содержащих ровно 1, 2 … N рёбер для каждого из N чисел соответственно.
+_Уникальная характеристика ребра_ – набор из N чисел, которые показывают количество путей ведущих из одной вершины ребра
+в другую вершину ребра и содержащих ровно 1, 2 … N рёбер для каждого из N чисел соответственно.
 
-_Уникальная характеристика вершины_ – сортированный набор из N уникальных характеристик рёбер, содержащих данную вершину и вершины от 1-ой до N-ой вершины соответственно.
+_Уникальная характеристика вершины_ – сортированный набор из N уникальных характеристик рёбер, содержащих данную
+вершину и вершины от 1-ой до N-ой вершины соответственно.
 
-_Уникальная характеристика графа_ – сортированный набор из N уникальных характеристик вершин от 1-ой до N-ой вершины соответственно.
+_Уникальная характеристика графа_ – сортированный набор из N уникальных характеристик вершин от 1-ой до N-ой
+вершины соответственно.
 
 Для определения изоморфности двух графов достаточно проверить на равенство их уникальные характеристики.
 
 Сравнение работы переборного и эвристического алгоритма
 
-Переборный алгоритм находит все перестановки вершин. Количество перестановок из N вершин – N! Следовательно, время работы алгоритма прямопропорционально факториалу количества вершин. Дополнительной памяти алгоритм не требует.
+Переборный алгоритм находит все перестановки вершин. Количество перестановок из N вершин – N! Следовательно, время
+работы алгоритма прямопропорционально факториалу количества вершин. Дополнительной памяти алгоритм не требует.
 
 Время работы алгоритма с полным перебором:
 
-table(table).
-|Количество вершин|5|6|7|8|9|10|11|12|13|
-|Время проверки|1мс|1мс|3мс|3мс|39мс|281мс|2с 503мс|30с 439мс|6м 28с|
+<table class="table table-condensed table-bordered">
+<tr>
+    <td>Количество вершин</td>
+    <td>5</td>
+    <td>6</td>
+    <td>7</td>
+    <td>8</td>
+    <td>9</td>
+    <td>10</td>
+    <td>11</td>
+    <td>12</td>
+    <td>13</td>
+</tr>
+<tr>
+    <td>Время проверки</td>
+    <td>1мс</td>
+    <td>1мс</td>
+    <td>3мс</td>
+    <td>3мс</td>
+    <td>39мс</td>
+    <td>281мс</td>
+    <td>2с 503мс</td>
+    <td>30с 439мс</td>
+    <td>6м 28с</td>
+</tr>
+</table>
 
-В данном эвристическом алгоритме нам требуется найти N степеней матрицы смежности N x N. Время перемножения матриц пропорционально N ^3^ . Значит, общее время перемножения матриц прямопропорционально N ^4^ . Память, требуемая для хранения матриц прямопропорциональна N ^3^ . Однако, мы не учли экспоненциальный рост элементов матрицы, а, следовательно, и линейный рост длины числа. В грубой оценке будем считать, что использование памяти и времени прямопропорционально N ^4^ и N ^5^ соответственно.
+В данном эвристическом алгоритме нам требуется найти N степеней матрицы смежности $$N \times N$$. Время перемножения матриц
+пропорционально $$N^3$$ . Значит, общее время перемножения матриц прямопропорционально $$N^4$$ . Память, требуемая для
+хранения матриц прямопропорциональна N ^3^ . Однако, мы не учли экспоненциальный рост элементов матрицы, а,
+следовательно, и линейный рост длины числа. В грубой оценке будем считать, что использование памяти и времени
+прямопропорционально $$N^4$$ и $$N^5$$ соответственно.
 
 Время работы эвристического алгоритма:
 
-table(table).
-|Количество вершин|10|20|30|40|50|60|70|80|90|100|
-|Время проверки|4мс|113мс|472мс|1с 677мс|4с 624мс|11с|22с|42с|1м 12с|2м 29с|
+<table class="table table-condensed table-bordered">
+<tr>
+    <td>Количество вершин</td>
+    <td>10</td>
+    <td>20</td>
+    <td>30</td>
+    <td>40</td>
+    <td>50</td>
+    <td>60</td>
+    <td>70</td>
+    <td>80</td>
+    <td>90</td>
+    <td>100</td>
+</tr>
+<tr>
+    <td>Время проверки</td>
+    <td>4мс</td>
+    <td>113мс</td>
+    <td>472мс</td>
+    <td>1c 677мс</td>
+    <td>4c 624мс</td>
+    <td>11с</td>
+    <td>22с</td>
+    <td>42c</td>
+    <td>1м 12c</td>
+    <td>3м 29c</td>
+</tr>
+</table>
 
-h4. Проверка корректности работы эвристического алгоритма на персональном компьютере
+### Проверка корректности работы эвристического алгоритма на персональном компьютере
 
-Если эвристический алгоритм дал отрицательный результат, значит, графы точно не изоморфны. Иначе требуется дополнительная проверка.
+Если эвристический алгоритм дал отрицательный результат, значит, графы точно не изоморфны.
+Иначе требуется дополнительная проверка.
 
 _1) Проверка сравнением результатов, полученных полным перебором и эвристическим алгоритмом._
 
-Даёт абсолютно точную оценку. Недостаток метода – невозможность проверки алгоритма на больших графах в связи с медленной работой переборного алгоритма.
+Даёт абсолютно точную оценку. Недостаток метода – невозможность проверки алгоритма на больших графах в связи с
+медленной работой переборного алгоритма.
 
 _2) Проверка нахождением биекции (перестановки) вершин._
 
-Возьмём две вершины, у которых уникальные характеристики равны. Пусть это будет первая вершина. Следующие вершины будем выбирать так, чтобы они имели одинаковые уникальные характеристики для всех рёбер между уже выбранными вершинами.
+Возьмём две вершины, у которых уникальные характеристики равны. Пусть это будет первая вершина. Следующие вершины
+будем выбирать так, чтобы они имели одинаковые уникальные характеристики для всех рёбер между уже выбранными вершинами.
 
-Понятно, что если графы не изоморфны, то никакой алгоритм не сможет найти биекцию, ставящую графы в соответствие. Остаётся рассмотреть один случай, когда эвристический алгоритм дал положительный результат, а биекция, ставящая граф в соответствие другому не найдена.
+Понятно, что если графы не изоморфны, то никакой алгоритм не сможет найти биекцию, ставящую графы в соответствие.
+Остаётся рассмотреть один случай, когда эвристический алгоритм дал положительный результат, а биекция, ставящая граф
+в соответствие другому не найдена.
 
-Находились все графы данной размерности, сортировались по уникальным характеристикам, сравнивались между собой только характеристики находящиеся в списке рядом.
+Находились все графы данной размерности, сортировались по уникальным характеристикам, сравнивались между собой только
+характеристики находящиеся в списке рядом.
 
 Зависимость количества графов, имеющих различные матрицы смежности от количества вершин в графе
 
-table(table).
-|Количество вершин|1|2|3|4|5|6|7|8|9|
-|Количество графов|1|2|8|64|1 024|32 768|2 097 152|268 435 456|68 719 476 736|
+<table class="table table-condensed table-bordered">
+<tr>
+    <td>Количество вершин</td>
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
+    <td>4</td>
+    <td>5</td>
+    <td>6</td>
+    <td>7</td>
+    <td>8</td>
+    <td>9</td>
+</tr>
+<tr>
+    <td>Количество графов</td>
+    <td>1</td>
+    <td>2</td>
+    <td>8</td>
+    <td>64</td>
+    <td>1 024</td>
+    <td>32 768</td>
+    <td>2 097 152</td>
+    <td>268 435 456</td>
+    <td>68 719 476 736</td>
+</tr>
+</table>
 
 Для более эффективной проверки вводились следующие оптимизации:
 
-1) Пред. расчёт уникальных характеристик графа для уменьшения времени проверки (не надо повторно вычислять уникальные характеристики для сравниваемых графов).
+1) Пред. расчёт уникальных характеристик графа для уменьшения времени проверки (не надо повторно вычислять уникальные
+ характеристики для сравниваемых графов).
 
-2) Проверка наборов графов только с одинаковым возрастающим набором степеней вершин для уменьшения используемой памяти (не надо хранить в памяти все графы одновременно).
+2) Проверка наборов графов только с одинаковым возрастающим набором степеней вершин для уменьшения используемой памяти
+(не надо хранить в памяти все графы одновременно).
 
-table(table).
-||Все графы|Только с одинаковым возрастающим набором степеней вершин|
-|Пред. расчёт уникальных характеристик графа|Метод 1|Метод 3|
-|Сравнение «на лету»|Метод 2|Метод 4|
+<table class="table table-condensed table-bordered">
+<tr>
+    <th></th>
+    <th>Все графы</th>
+    <th>Только с одинаковым возрастающим набором степеней вершин</th>
+</tr>
+<tr>
+    <td>Пред. расчёт уникальных характеристик графа</td>
+    <td>Метод 1</td>
+    <td>Метод 3</td>
+</tr>
+<tr>
+    <td>Сравнение «на лету»</td>
+    <td>Метод 2</td>
+    <td>Метод 4</td>
+</tr>
+</table>
 
 Время проверки при различных методах:
 
-table(table).
-||1|2|3|4|5|6|7|8|9|
-|Метод 1|5мс|7мс|12мс|34мс|410мс|-память||||
-|Метод 2|3мс|7мс|14мс|53мс|1с 730мс|2м 38с|-память|||
-|Метод 3|6мс|7мс|15мс|20мс|56мс|630мс|19с 687мс|-память||
-|Метод 4|8мс|9мс|14мс|20мс|67мс|1с 230мс|1м 6с|1ч 46м|-время|
+<table class="table table-condensed table-bordered">
+<tr>
+    <td></td>
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
+    <td>4</td>
+    <td>5</td>
+    <td>6</td>
+    <td>7</td>
+    <td>8</td>
+    <td>9</td>
+</tr>
+<tr>
+    <td>Метод 1</td>
+    <td>5мс</td>
+    <td>7мс</td>
+    <td>12мс</td>
+    <td>34мс</td>
+    <td>410мс</td>
+    <td>-память</td>
+    <td></td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>Метод 2</td>
+    <td>3мс</td>
+    <td>7мс</td>
+    <td>14мс</td>
+    <td>53мс</td>
+    <td>1с 730мс</td>
+    <td>2м 38с</td>
+    <td>-память</td>
+    <td></td>
+    <td></td>
+</tr>
+<tr>
+    <td>Метод 3</td>
+    <td>6мс</td>
+    <td>7мс</td>
+    <td>15мс</td>
+    <td>20мс</td>
+    <td>56мс</td>
+    <td>630мс</td>
+    <td>19с 687мс</td>
+    <td>-память</td>
+    <td></td>
+</tr>
+<tr>
+    <td>Метод 4</td>
+    <td>8мс</td>
+    <td>9мс</td>
+    <td>14мс</td>
+    <td>20мс</td>
+    <td>67мс</td>
+    <td>1с 230мс</td>
+    <td>1м 6с</td>
+    <td>1ч 46м</td>
+    <td>-время</td>
+</tr>
+</table>
 
 При проведении проверки не нашлось ни одной пары графов, для которой бы алгоритм дал неверный результат.
 
-h4. Использование алгоритма на примере решения задачи:
+### Использование алгоритма на примере решения задачи:
 
 {% highlight java linenos %}
 import java.io.*;
@@ -972,6 +1142,6 @@ public class Main {
 }
 {% endhighlight %}
 
-h4. Литература:
+### Литература:
 
 http://ru.Wikipedia.org/ :  Определения графа, изоморфизма, пути
