Убрала статьи из МатЛог/Главная, привела их к нормальному виду, кроме одной.

--- a/_posts/mathematiques/2014-08-29-XXVIII-4.md
+++ b/_posts/mathematiques/2014-08-29-XXVIII-4.md
@@ -2,18 +2,18 @@
 layout: post
 title: 2013-2014 год. 4-й тур (очный), Франция (29 августа 2014)
 author: Valentin Gubarev
-section: mathematiques
+section: mathematiques-tasks-other
 ---
 
 <script src="/js/mathematiques.js"></script>
 
 ---
 
-###Условия задач
+### Условия задач
 
 ---
 
-####Содержание:
+#### Содержание:
 
 1. [Бусы](#1)
 2. [Раз два три четыре пять](#2)
@@ -38,7 +38,7 @@ section: mathematiques
 
 <a name="1"></a>
 
-####1. Бусы
+#### 1. Бусы
 
 Белла купила себе бусы из десяти бусин: 4 белых и 6 чёрных. Они показаны на картинке слева. Белла хочет расположить бусины  красиво: две белые - две чёрные - две белые - две чёрные - две белые, как показано на картинке справа. Для этого Белла выбирает ряд из нескольких идущих подряд бусин, вырезает этот ряд из бус и переворачивает его целиком. После переворота бусины из выбранного Беллой ряда идут в обратном порядке, а остальные бусины остаются на своих местах. За какое наименьшее число таких переворотов Белла сумеет получить бусы изображённые на правой картинке?
 
@@ -49,7 +49,7 @@ section: mathematiques
 
 <a name="2"></a>
 
-####2. Раз два три четыре пять
+#### 2. Раз два три четыре пять
 
 Аня выпилила из дерева объёмные цифры от 1 до 5, как показано на первом рисунке. Верхняя сторона цифр покрашена в белый цвет, а все остальные стороны серые. Аня может поворачивать цифры на четверть оборота (в любую сторону) или на пол-оборота, но не может их переворачивать, то есть, белая сторона цифр всегда должна оставаться наверху. Аня сложила цифры стопочкой и сфотографировала стопочку сбоку. На втором рисунке показана её фотография. В каком порядке, если идти снизу вверх, расположены цифры в Аниной стопке?
 
@@ -61,7 +61,7 @@ section: mathematiques
 
 <a name="3"></a>
 
-####3. Домино
+#### 3. Домино
 
 У Вас имеется набор попарно различных домино с цифрами от 0 до 4 без дублей. Иными словами, на каждом домино стоит пара цифр от 0 до 4, эти две цифры не могут совпадать, а пары цифр на разных домино всегда различны. Если два домино касаются друг друга, в соседних квадратиках должны стоять одинаковые цифры. Заполните ряд домино на картинке так, чтобы сумма цифр слева и справа от средней вертикальной черты была одинаковой.
 
@@ -73,7 +73,7 @@ section: mathematiques
 
 <a name="4"></a>
 
-####4. Николай на каникулах
+#### 4. Николай на каникулах
 
 Николай подсчитал, что за время каникул набралось 20 дней, когда дождя не было после полудня и 14 дней, когда дождя не было до полудня. При этом был один день, когда дождь шёл и до, и после полудня. Всего дождливых дней (то есть дней, когда дождь шёл или до, или после полудня, или и до, и после) было 13. Сколько было дней, когда дождь шёл до полудня.
 
@@ -85,7 +85,7 @@ section: mathematiques
 
 <a name="5"></a>
 
-####5. Башенки
+#### 5. Башенки
 
 В каждой строке и в каждом столбце квадрата 4Х4 на рисунке имеется одна пустая клетка, а в остальных трёх стоят башенки высотой в 1, 2 и 3 метра (по одной башенки на клетку, все три башенки разной высоты). Цирфы вне квадрата равны суммарной высоте видимых от этой цифры башенок в соответствующей строке или в соответствующем столбце. При этом, более высокие башенки загораживают более низкие. Например, если в какой-нибудь строке стоят, слева направо, башенки высотой в 1, 3 и 2 метра, то слева от этой строки будет стоять число 4=1+3 (башенку в 2 метра не видно), а справа от этой строки будет стоять число 5=3+2 (башенку в 1 метр не видно). 
 
@@ -99,7 +99,7 @@ section: mathematiques
 
 <a name="6"></a>
 
-####6. Хамелеоны
+#### 6. Хамелеоны
 
 На математическом острове живёт 20 синих, 14 белых и 10 красных хамелеонов. Когда два хамелеона разных цветов встречаются, оба они меняют свой цвет на третий. Никак по-другому поменять цвет хамелеоны не могут. Через какое минимальное число встречь все 44 хамелеона могут оказаться одного цвета? Если Вы считаете, что это вообще невозможно, напишите в ответе 0.
 
@@ -111,7 +111,7 @@ section: mathematiques
 
 <a name="7"></a>
 
-####7. Две или четыре
+#### 7. Две или четыре
 
 В клетки таблицы 5Х5 разрешается класть жетоны (не больше одного жетона в клетку). Два жетона называются соседями, если их клетки имеют общуюу сторону. Жетоны следует выложить так, чтобы у каждого жетона было либо ровно 2, либо ровно 4 соседа. Какое максимальное число жетонов можно выложить, следуя правилам? (На картинке показан пример с 14 жетонами).
 
@@ -123,7 +123,7 @@ section: mathematiques
 
 <a name="8"></a>
 
-####8. Вёдра воды
+#### 8. Вёдра воды
 
 У Марты имеется четыре ведра, объёмом в 3, 2, 1 и 4 литра соответственно. В первом ведре 2 литра воды, во втором 0 литров (оно пусто), в третьем 1 литр, в четвёртом 4 литра (эти два ведра наполнены целиком). Вёдра показаны на левой картинке, а вода в них изображена серым цветом. За оно переливание разрешается:
 - вылить всю воду из какого-нибудь ведра на траву,
@@ -140,7 +140,7 @@ section: mathematiques
 
 <a name="9"></a>
 
-####9. Угадай число
+#### 9. Угадай число
 
 Петя написал на бумажке шестизначное число. Затем он переписал то же число, пропустив одну цифру (и не меняя порядка остальных) так, получилось пятизначное число. Ни исходное, ни новое число не может начинаться с цифры ноль. Сумма двух написанных на листочке чисел равна 201403. Чему равно исходное шестизначное число?
 
@@ -152,7 +152,7 @@ section: mathematiques
 
 <a name="10"></a>
 
-####10. Эпидемия в прямоугольнике
+#### 10. Эпидемия в прямоугольнике
 
 Несколько клеток прямоугольника 5Х7 "больны", а остальные "здоровы". На каждом шаге, плюс к уже больным клеткам, заболевают все клетки, у которых ровно два больных соседа (то есть клетка заболевает, если имеется ровно две больных клетки, имеющих с ней общее ребро). Через несколько шагов все 35 клеток прямоугольника заболели. Какое могло быть наименьшее исходное число больных клеток? 
 
@@ -164,7 +164,7 @@ section: mathematiques
 
 <a name="11"></a>
 
-####11. Такси
+#### 11. Такси
 
 Улицы Математического города предсталяют из себя правильную квадратную решётку: кварталы являются клетками решётки, а перекрёстки - узлами решётки. Такси выехало с Алгебраического вокзала, проехало два квартала, повернуло, проехало 1 квартал, снова повренуло, проехало 4 квартала, опять повренуло и так далее. Повороты могут быть как направо, так и налево, но всегда на 90 градусов, а отрезки в 2, 1 и 4 квартала повторяются снова и снова в том же порядке. В какой-то момент, во время поворота, пассажир обнаружил, что такси снова оказалось на Алгебраическом вокзале. При этом оно ни разу не проехало по одной и той же улице или по одному и тому же перекрёстку дважды. Какое наименьшее количество кварталов могло проехать такси?
 
@@ -178,7 +178,7 @@ section: mathematiques
 
 <a name="12"></a>
 
-####12. Кумушки
+#### 12. Кумушки
 
 Каждая из шести кумушек узнала на рынке новую сплетню, причём все шесть сплетень разные. Во время телефонного разговора две кумушки обмениваются всеми известными им на данный момент сплетнями. Какое наименьшее количество телефонных разговоров потребуется, чтобы все кумушки узнали все сплетни?
 
@@ -190,25 +190,25 @@ section: mathematiques
 
 <a name="13"></a>
 
-####13. Коза
+#### 13. Коза
 
 На рисунке показан вид сверху на поле и хижину пастуха. Хижина предстваляет из себя прямоугольник, причём его длина в полтора раза больше ширины. Вертикальным измерением мы в этой задаче пренебрегаем. Пастух может прявязать свою козу к любой точке стен своей хижины (снаружи). Длина верёвки равна полуперимеру хижины, то есть, сумме длины и ширины прямоугольника. Если привязать козу к углу хижины (крестик на рисунке), то доступный ей участок (серая область на рисунке) имеет площадь 88 квадратных метров. Если прявязать козу к другой точке стены, какова будет минимальная возможная площадь доступного ей участка?
 
 <a name="14"></a>
 
-####14. Электронное табло
+#### 14. Электронное табло
 
 На электронном табло высвечено три трёхзначных числа. Все девять цифр, использованные в этих числах различны; ни одно число не может начинваться с нуля. Сумма чисел равна 2014. Для высвечивания каждой цифры требуется от 2 до 7 отрезков, как показано на первой картинке. Цифры на диаграммах слева от табло показывают сколько раз в данной строке зажжён отрезок в данной позиции. Например, в последней строке средний горизонтальный отрезок зажжён ровно в одной из трёх цифр. Кроме того, известно, что в среднем столбце табло (то есть, в разряде десятков) в сумме зажжено 13 отрезков. Чему равны три числа на табло, если идти сверху вниз?
 
 <a name="15"></a>
 
-####15. Пентамино и 2014
+#### 15. Пентамино и 2014
 
 У Наташи имеется набор из 12 пентамино (см. первый рисунок). Наташа хочет замостить ими прямоугольник 5Х13 так, чтобы внутри осталось 15 пустых клеток, образующих цифры 2014. При этом два пентамино останутся неиспользованными. Пустые клетки закрашены чёрным на втором рисунке. Пентамино разрешается переворачивать и поворачивать. Они должны заполнить все клетки (кроме 15 чёрных) без наложений. Наташа начала с того, что положила пентамино-палочку на правый столбец прямоугольника, как показано на втором рисунке серым цветом. Закончите замощение.
 
 <a name="16"></a>
 
-####16. Углы многогранника
+#### 16. Углы многогранника
 
 Имеется выпуклый многогранник. В каждом углу каждой грани многогранника Петя написал, чему равен этот угол в градусах. Оказалось, что если сложить все углы кроме одного, получится 2014 градусов. Известно, что у многогранника ровно три треугольных грани. Сколько у него вершин, из которых выходит ровно по три ребра?
 
@@ -216,13 +216,13 @@ section: mathematiques
 
 <a name="17"></a>
 
-####17. Каска самурая
+#### 17. Каска самурая
 
 На рисунке изображена каска самурая. Квадрат и равносторонний треугольник изображённые жирными линиями вписаны в общую окружность и имеют общую нижнюю вершину. Сумма площадей трёх серых треугольников над пунктиром равна 120 квадратным сантиметрам. Найдите суммарную площадь в квадратных сантиметрах двух серых треугольников под пунктиром. Если нужно, округлите ответ до ближайшего целого числа.
 
 <a name="18"></a>
 
-####18. Труба пакетбота
+#### 18. Труба пакетбота
 
 На рисунке изображена труба пакетбота. Площадь квадрата со стороной AD равна 2014 квадратным дециметрам. Углы ABD и BCD - прямые. Известно, что длины отрезков AB, BC и CD выражаются целым числом дециметров, причём сумма этих трёх целых чисел - полный квадрат. Кроме того, известно, что AB > BC > CD > 0. На рисунке отношения между длинами искажены. Найдите длины отрезков AB, BC и CD.
 
