--- a/_posts/mathematiques/2015-02-13-XXIX-1.md
+++ b/_posts/mathematiques/2015-02-13-XXIX-1.md
@@ -2,18 +2,18 @@
 layout: post
 title: 2014-2015 год. 1-й тур (заочный)
 author: Valentin Gubarev
-section: mathematiques
+section: mathematiques-tasks-other
 ---
 
 <script src="/js/mathematiques.js"></script>
 
 ---
 
-###Условия задач
+### Условия задач
 
 ---
 
-####Содержание:
+#### Содержание:
 
 1. [Футошики](#1)
 2. [Повторения](#2)
@@ -38,7 +38,7 @@ section: mathematiques
 
 <a name="1"></a>
 
-####1. Футошики
+#### 1. Футошики
 
 Впишите в пустые ячейки цифры 1, 2 и 3 так, чтобы каждая из этих цифр один раз встречалась в каждой строке и каждом столбце. Знак < означает, что цифра, расположенная слева меньше цифры, расположенной справа.
 
@@ -49,7 +49,7 @@ section: mathematiques
 
 <a name="2"></a>
 
-####2. Повторения
+#### 2. Повторения
 
 Заполните пропуски в этом сложении так, чтобы цифра 2 появлялась в нём пять раз, а цифры 0, 1 и 5 по два раза. Запись числа не может начинаться с 0.
 
@@ -61,7 +61,7 @@ section: mathematiques
 
 <a name="3"></a>
 
-####3. Автоссылки
+#### 3. Автоссылки
 
 Ниже написаны четаре фразы, среди которых, по крайней мере, одна верная.
 1. Только одна из этих фраз неверна.
@@ -78,7 +78,7 @@ section: mathematiques
 
 <a name="4"></a>
 
-####4. Дорожный указатель
+#### 4. Дорожный указатель
 
 Прямоугольник 31 см на 65 см был разрезан по прямым линиям на минимальное количество частей таким образом, чтобы можно было оставить из всех частей дорожный указатель, представленный справа, состоящий из прямоугольника (столба) и из квадрата.
 Нарисуйте линии разреза в прямоугольнике.
@@ -91,7 +91,7 @@ section: mathematiques
 
 <a name="5"></a>
 
-####5. Световая гирлянда
+#### 5. Световая гирлянда
 
 Световая гирлянда для новогодних праздников состоит из 18 ламп, изображённых в виде прямоугольников, соединённых между собой проводами. Когда гирлянду включают, то сначала мгновенно зажигается только одна из 18 ламп. Затем, через 1 секунду загораются все лампы, напрямую соединённые с зажённой лампой. Через какое минимальное количество секунд зажгутся все лампы гирлянды?
 Какая лампа при этом зажжётся первой?
@@ -106,7 +106,7 @@ section: mathematiques
 
 <a name="6"></a>
 
-####6. Умножение
+#### 6. Умножение
 
 Из четырёх домино Матильда выложила произведение. Положение домино показано на рисунке. Запишите множители и произведение.
 
@@ -118,7 +118,7 @@ section: mathematiques
 
 <a name="7"></a>
 
-####7. Числа Матиасса
+#### 7. Числа Матиасса
 
 Матиас выписал все трёхзначные числа, которые делятся на 15 и сумма цифр которых равна 15. Например, 825 (8+2+5=15 и 825 делится на 15). Сколько чисел выписал Матиас, включая данный пример?
 
@@ -130,7 +130,7 @@ section: mathematiques
 
 <a name="8"></a>
 
-####8. Будильник господина Жака Палиса
+#### 8. Будильник господина Жака Палиса
 
 Будильник господина Жака Палиса запрограммирован так, чтобы звонить через одинаковые промежутки (целое количество минут). В 8.00, когда будильник прозвонил в пятый раз, Жак встал и сказал себе: "Ровно четверть часа назад я был ещё в постели, мой будильник не звонил, но к тому времени он точно уже прозвонил 1 раз". Во сколько прозвонил будильник Жака Палиса в первый раз?
 
@@ -144,7 +144,7 @@ section: mathematiques
 
 <a name="9"></a>
 
-####9. Паззл Матильды
+#### 9. Паззл Матильды
 
 Из шести фигур Матильда сумела выложить квадрат. Размеры фигур указаны в сантиметрах. Составьте этот квадрат.
 
@@ -156,7 +156,7 @@ section: mathematiques
 
 <a name="10"></a>
 
-####10. Кодовый замок
+#### 10. Кодовый замок
 
 В колледже у Матиасса есть ящик с кодовым замком. Код Матиаса - трёхзначное число (оно не начинается с 0). Если прибавить 3 к этому трёхзначному числу, то получим результат, сумма цифр которого равна трети суммы цифр кода. Определите код Матиаса.
 
@@ -168,7 +168,7 @@ section: mathematiques
 
 <a name="11"></a>
 
-####11. Полоска Мариса
+#### 11. Полоска Мариса
 
 Марис трижды согнул полоску прямоугольной бумаги длиной 30 см и шириной 4 см так, как показано на рисунке. При этом два конца полоски наложились друг на друга, образовав квадрат со стороной 4 см. Внутри согнутой полоски образовался маленький квадрат. Определите сторону этого маленького центрального квадрата, окруженного полоской Мариса.
 
@@ -182,7 +182,7 @@ section: mathematiques
 
 <a name="12"></a>
 
-####12. Две дуги круга
+#### 12. Две дуги круга
 
 У дуги в 45 в круге Алена та же длина, что и у дуги в 30 в круге Беатрисы. Площадь круга Алена - 60 см2. Определите площадь круга Беатрисы. Ответ запишите в см2.
 
@@ -194,13 +194,13 @@ section: mathematiques
 
 <a name="13"></a>
 
-####13. Раскрашивание корабля
+#### 13. Раскрашивание корабля
 
 Имеется четыре различных цвета для раскрашивания каждого из треугольников, составляющих корабль. Если переместить любую из серых фигур (справа) на 4 треугольника корабля (фигуры можно поворачивать), то она накроет 4 треугольника разных цветов. Закрасьте все треугольники корабля, цвет которых отличается от цвета (цветов), использованного(ных) для раскрашивания трёх треугольников a, b и c.
 
 <a name="14"></a>
 
-####14. Магическая улитка
+#### 14. Магическая улитка
 
 Впишите в некоторые ячейки сетки цифры от 1 до 3 так, чтобы:
 - каждая цифра появилась ровно 1 раз в каждой строке и в каждом столбце;
@@ -209,13 +209,13 @@ section: mathematiques
 
 <a name="15"></a>
 
-####15. Число года
+#### 15. Число года
 
 Число года x - натуральное число или 0. Числа y и z - два положительных вещественных числа, которые одновременно удовлетворяютдвум равенствам: xz+yz=20; x+y+z=15. Чему равно x?
 
 <a name="16"></a>
 
-####16. Среднее квадратическое
+#### 16. Среднее квадратическое
 
 Среднее квадратическое всех целых чисел от 1 до 77 равно 2015. Сколько натуральных чисел строго меньших 2015 равны среднему квадратическому последовательных натуральных чисел от 1 до некоторого натурального числа? Замечание: среднее квадратическое единственного числа равно самому числу.
 
@@ -223,13 +223,13 @@ section: mathematiques
 
 <a name="17"></a>
 
-####17. Счастливое число
+#### 17. Счастливое число
 
 Счастливое число - это четырёхзначное число, которое равно сумме четвёртых степеней его цифр. Какие числа являются счастливыми?
 
 <a name="18"></a>
 
-####18. Многоугольники Пифа Гора
+#### 18. Многоугольники Пифа Гора
 
 Пифа Гор вписал три правильных многоугольника в одну окружность. У одного из многоугольников в два раза больше сторон, чем у другого. Используя три отрезка, длины которых являются длинами сторон этих трёх многоугольников, Пифа Гор может построить прямоугольный треугольник. Запишите в порядке возрастания три числа, которые являются сторонами многоугольников Пифа Гора.
 
