--- a/_posts/mathematiques/2014-07-23-XXVIII-3.md
+++ b/_posts/mathematiques/2014-07-23-XXVIII-3.md
@@ -2,18 +2,18 @@
 layout: post
 title: 2013-2014 год. 3-й тур (очный)
 author: Valentin Gubarev
-section: mathematiques
+section: mathematiques-tasks-other
 ---
 
 <script src="/js/mathematiques.js"></script>
 
 ---
 
-###Условия задач
+### Условия задач
 
 ---
 
-####Содержание:
+#### Содержание:
 
 1. [Домино](#1)
 2. [День рождения](#2)
@@ -38,7 +38,7 @@ section: mathematiques
 
 <a name="1"></a>
 
-####1. Домино
+#### 1. Домино
 
 |0 0|_ _|1 1|_ _|0 3|2 0|1 3| ? |2 2|3 3|
 
@@ -55,7 +55,7 @@ section: mathematiques
 
 <a name="2"></a>
 
-####2. День рождения
+#### 2. День рождения
 
 Матиас празднует день рождения - 11 лет. Он пригласил друзей. Всем его друзьям 11 лет за исключеним двух, которым 10 лет и 12 лет. Матиасу и его друзьям всем вместе - 109 лет. Сколько друзей пригласил Матиас?
 
@@ -71,7 +71,7 @@ section: mathematiques
 
 <a name="3"></a>
 
-####3. Свечи
+#### 3. Свечи
 
 У Матиаса есть 5 одинаковых свечей. Через каждые два часа он зажигает новую свечу. Каждая свеча горит 8 часов. В течение какого количества часов будут гореть одновременно только три свечи?
 
@@ -87,7 +87,7 @@ section: mathematiques
 
 <a name="4"></a>
 
-####4. Копилки Матильды
+#### 4. Копилки Матильды
 
 Матильда коллекционирует копилки. Все её копилки содержат одну или несколько монет евро, и нет копилок с одинаковым количеством монет. Всего у Матильды есть 60 евро. Какое максимальное количество копилок может быть у неё?
 
@@ -107,7 +107,7 @@ section: mathematiques
 
 <a name="5"></a>
 
-####5. Чемпионату - 28 лет
+#### 5. Чемпионату - 28 лет
 
 Запишем первое число - 1986 (год создания Чемпионата математических и логических игр). Выберем одну любую цифру в первом числе (1, 9, 8 или 6). Прибавим эту цифру к первому числу (1986) и получим второе число. Затем выбираем любую цифру из второго числа, прибавим её ко второму числу, и получим третье число. Повторив этот процесс много раз (любую цифру последнего числа складываем с самим числом и получаем следующее число), получим число 2014. Какое минимальное количество чисел было найдено?
 
@@ -126,7 +126,7 @@ section: mathematiques
 
 <a name="6"></a>
 
-####6. Сумма цифр равна двум
+#### 6. Сумма цифр равна двум
 
 Запишем все натуральные числа, сумма цифр которых равна 2, в порядке возрастания:
 2, 11, 20, 101, 110, 200, 1001, 1010, 1100, 2000, ...
@@ -145,7 +145,7 @@ section: mathematiques
 
 <a name="7"></a>
 
-####7. За столом
+#### 7. За столом
 
 Группа из 9 человек завтракает в кафе за тремя столами по 3 человека за одним столом. В течение нескольких дней каждый из них сидел рядом со всеми остальными ровно два раза, при этом один раз справа и один раз слева. Сколько дней группа ходила завтракать в кафе?
 
@@ -158,7 +158,7 @@ section: mathematiques
 
 <a name="8"></a>
 
-####8. Сложение
+#### 8. Сложение
 
 Заполните цифрами от 0 до 9 пустые ячейки в сложении так, чтобы:
 сложение было правильным;
@@ -172,7 +172,7 @@ section: mathematiques
 
 <a name="9"></a>
 
-####9. Лампы на кубе
+#### 9. Лампы на кубе
 
 Лампы размещены на рёбрах куба. Для каждой грани найдётся 8 ламп, расположенных на одинаковом растоянии от неё. Сколько всего ламп на кубе?
 
@@ -182,7 +182,7 @@ section: mathematiques
 
 <a name="10"></a>
 
-####10. Ребус
+#### 10. Ребус
 
 FFJM=JEU+2014
 
@@ -194,48 +194,48 @@ FFJM=JEU+2014
 
 <a name="11"></a>
 
-####11. Матсити
+#### 11. Матсити
 
 Матсити - город в виде квадрата сос тороной 5 км. Улицы, шириной которых можно принебречь, разделяют город на квадратные блоки длиной 200 м. Путь одного из трамваев города - замкнутая ломаная длиной 10 км. Определите максимальную площадь области внутри этой ломаной.
 
 <a name="12"></a>
 
-####12. Секретный код
+#### 12. Секретный код
 
 Клавиатура на двери сейфа содержит три клавиши: A, B, C. Секретный код - последовательность из трёх букв (A, B или C). Буква может повторяться 1, 2 или 3 раза в коде. Если три последние нажатые клавиши клавиатуры образовывают код, то дверь сейфа открывается. Сообщник рассказал Арсену, что код начинается с буквы A (возможны 9 таких случаев). Какое количество нажатий должен сделать Арсен, чтобы точно открыть сейф? В ответе укажите наименьшее из возможных значений.
 
 <a name="13"></a>
 
-####13. Ваза
+#### 13. Ваза
 
 Предприятие изобрело очень прочные вазы. В 16-ти этажном доме тестировщик хочет определить, с какого максимального этажа ваза не разобьётся, если её бросить вниз. Этот этаж один и тот же для всех ваз. Ваза может быть брошена очень большое количество раз, не будучи разбитой, и это не изменит её технических характеристик. Предприятие дало тестировщику 2 вазы, которые он имеет право разбить. Какое наименьшее количество тестов необходимо выполнить, чтобы гарантировать нахождение наибольшего этажа, с которого ваза не разобьётся при падении?
 <a name="14"></a>
 
-####14. Круг и равнобедренная трапеция
+#### 14. Круг и равнобедренная трапеция
 
 Четыре строны равнобедренной трапеции касаются окружности. Основания трапеции соотвтетсвенно равны 22 и 14 см. Определить площадь круга в кв.см. Возьмите пи=22/7 и ответ округлите до ближайшего целого. Замечание: на рисунке не соблюдены пропорции.
 
 <a name="15"></a>
 
-####15. Зрительный зал
+#### 15. Зрительный зал
 
-Кресла зрительного зала пронумерованы от 1 до 2014 ряд за рядом, начиная от сцены и слева напрвао вдоль сцены. Таким образом, место номер 2 находится на пересечении первого ряда и второй колонки. В каждом ряду одинаковое количество кресел и ряды полностью заполнены. Определите номер кресла на пересечении двадцатого ряда и четырнадцатой колонки.
+Кресла зрительного зала пронумерованы от 1 до 2014 ряд за рядом, начиная от сцены и слева направо вдоль сцены. Таким образом, место номер 2 находится на пересечении первого ряда и второй колонки. В каждом ряду одинаковое количество кресел и ряды полностью заполнены. Определите номер кресла на пересечении двадцатого ряда и четырнадцатой колонки.
 
 <a name="16"></a>
 
-####16. Пять НОК
+#### 16. Пять НОК
 
 Впишите разные двузначные числа в пустые квадраты. На каждой из пяти линий, отмеченных чертой, число в середине должно быть Наименьшим Общим Кратным двух других. На диагонали число, расположенное сверху слева, должно быть больше числа, расположенного внизу справа.
 
 <a name="17"></a>
 
-####17. Участок земли
+#### 17. Участок земли
 
 Два брата делили между собой наследство - четырёхугольный участок земли, каждая из четырёх сторон которого измеряется целым числом дециметров. Общая сторона для двух прямоугольных треугольников равна 2014 дм. Определите периметр четырёхугольного участка в дм, если это значение меньше 10000 дм. Замечание: на рисунке не соблюдены пропорции.
 
 <a name="18"></a>
 
-####18. Охота на призраков
+#### 18. Охота на призраков
 
 Группа из N охотников борется с группой из N призраков. Каждый охотник вооружён лазером, способным уничтожить призрака лучом. Луч распространяется по прямой линии и заканчивается на призраке, уничтожая его. надо уничтожить всех призраков, при этом лучи не должны пересекаться. Охотники и призраки расположены на одинаковом расстоянии друг от друга, чередуясь, по окружности в 2N точках.
 Для N=4 (4 призрака и 4 охотника) на рисунке представлены 14 выигрышных стратегий: для N = 1, 2, 3 или 5, количество выигрышных стратегий соотвтетсвенно равно 1, 2, 5 или 42. Сколько выигрышных стратегий существует для N=7?
