--- a/_posts/mathematiques/2015-04-06-XXIX-2.md
+++ b/_posts/mathematiques/2015-04-06-XXIX-2.md
@@ -2,18 +2,18 @@
 layout: post
 title: 2014-2015 год. 2-й тур (заочный)
 author: Valentin Gubarev
-section: mathematiques
+section: mathematiques-tasks-other
 ---
 
 <script src="/js/mathematiques.js"></script>
 
 ---
 
-###Условия задач
+### Условия задач
 
 ---
 
-####Содержание:
+#### Содержание:
 
 1. [Склеивание](#1)
 2. [Коробка для карандашей](#2)
@@ -38,7 +38,7 @@ section: mathematiques
 
 <a name="1"></a>
 
-####1. Склеивание
+#### 1. Склеивание
 
 Матильда обозначила буквами A, B, C, D, E и F шесть пятиугольников. Затем на столе она стала их склевать так, как показано на рисунке. В каком порядке она склеивала эти пятиугольники?
 
@@ -49,7 +49,7 @@ section: mathematiques
 
 <a name="2"></a>
 
-####2. Коробка для карандашей
+#### 2. Коробка для карандашей
 
 Матиас изготовил коробку для карандашей в виде призмы, грани которой - это пять прямоугольников и два пятиугольника в основаниях. Он решил раскрасить шесть граней (стороны и основание) так, чтобы две грани, имеющие общее ребро, были разного цвета. Какое минимальное количество цветов надо взять Матиасу?
 
@@ -61,7 +61,7 @@ section: mathematiques
 
 <a name="3"></a>
 
-####3. Лекарство
+#### 3. Лекарство
 
 ф
 
@@ -73,7 +73,7 @@ section: mathematiques
 
 <a name="4"></a>
 
-####4. Велосипед Матильды
+#### 4. Велосипед Матильды
 
 ф
 
@@ -85,7 +85,7 @@ section: mathematiques
 
 <a name="5"></a>
 
-####5. Цепь
+#### 5. Цепь
 
 ф
 
@@ -99,7 +99,7 @@ section: mathematiques
 
 <a name="6"></a>
 
-####6. Лотерея
+#### 6. Лотерея
 
 ф
 
@@ -111,7 +111,7 @@ section: mathematiques
 
 <a name="7"></a>
 
-####7. Разбиение
+#### 7. Разбиение
 
 ф
 
@@ -123,7 +123,7 @@ section: mathematiques
 
 <a name="8"></a>
 
-####8. Сложение и умножение
+#### 8. Сложение и умножение
 
 ф
 
@@ -137,7 +137,7 @@ section: mathematiques
 
 <a name="9"></a>
 
-####9. Музей
+#### 9. Музей
 
 ф
 
@@ -149,7 +149,7 @@ section: mathematiques
 
 <a name="10"></a>
 
-####10. Деление
+#### 10. Деление
 
 ф
 
@@ -161,7 +161,7 @@ section: mathematiques
 
 <a name="11"></a>
 
-####11. Магическое число
+#### 11. Магическое число
 
 ф
 
@@ -175,7 +175,7 @@ section: mathematiques
 
 <a name="12"></a>
 
-####12. Очки
+#### 12. Очки
 
 ф
 
@@ -187,25 +187,25 @@ section: mathematiques
 
 <a name="13"></a>
 
-####13. Цифровой циферблат
+#### 13. Цифровой циферблат
 
 ф
 
 <a name="14"></a>
 
-####14. Деление Матиаса
+#### 14. Деление Матиаса
 
 ф
 
 <a name="15"></a>
 
-####15. Факториал
+#### 15. Факториал
 
 ф
 
 <a name="16"></a>
 
-####16. Пешки
+#### 16. Пешки
 
 ф
 
@@ -213,13 +213,13 @@ section: mathematiques
 
 <a name="17"></a>
 
-####17. Параллелепипед
+#### 17. Параллелепипед
 
 ф
 
 <a name="18"></a>
 
-####18. Две шахматные доски
+#### 18. Две шахматные доски
 
 ф
 
