--- a/_posts/mc/2017-10-15-lab_01.md
+++ b/_posts/mc/2017-10-15-lab_01.md
@@ -10,7 +10,23 @@ language: 'C/C++'
 <p>Для выполнения практической работы потребуется отладочная плата
 <a href="/mc/files/1986EvBrd_48_Rev3.pdf">1986EvBrd_48_Rev3</a>.
 </p>
+<p>В этой практической работе дан пример реализации мигания двумя светодиодами,
+которые расположены на отладочной плате.
+</p>
+<p>Проект состоит из двух файлов. Один из них написан на языке ассемблер,
+другой на языке си.
+</p>
 
+<h4>Файл startup_1986be9x.s</h4>
+{% highlight cpp linenos %}
+	AREA    RESET, DATA, READONLY
+	IMPORT 	main
+	DCD     0x20006000      ; Вершина стека
+	DCD     main            ; Выполнение программы main
+	END
+{% endhighlight %}
+
+<h4>Файл main.c</h4>
 {% highlight cpp linenos %}
 /*------------------------------------------------*/
 /* Практическая работа №01 (мигание светодиодами) */
@@ -82,9 +98,9 @@ int main (void) {
     F->PWR     = 0xFFFF;     /* Фронт ~10 нс         */
     F->GFEN    = 0x0000;     /* Фильтрация отключена */
 
-    F->RXTX = 0;
+    F->RXTX = 0x01;
     while(1){
-        F->RXTX ^= 0x01; /* Меняет состояние 0 бита */
+        F->RXTX ^= 0x03; /* Меняет состояние 0 бита */
         delay(300000);
     }
     
@@ -92,8 +108,10 @@ int main (void) {
 }
 {% endhighlight %}
 
-
-
+<h4>Задания для самостоятельного выполнения</h4>
+1. Добейтесь, что бы мигал только один из светодиодов.
+2. Теперь добейтесь, что бы мигал только один, но не тот, что при выполнении первого задания.
+3. Необходимо, что бы один из светодиодов мигал в два раза реже, чем другой.
 
 
 
