Коррекция Практического задания 01

--- a/_posts/mc/2017-10-15-lab_01.md
+++ b/_posts/mc/2017-10-15-lab_01.md
@@ -21,32 +21,32 @@ language: 'C/C++'
 {% highlight cpp linenos %}
 	AREA    RESET, DATA, READONLY
 	IMPORT 	main
-	DCD     0x20006000      ; Вершина стека
+	DCD     0x20008000      ; Вершина стека
 	DCD     main            ; Выполнение программы main
 	END
 {% endhighlight %}
 
 <h4>Файл main.c</h4>
 {% highlight cpp linenos %}
-/*------------------------------------------------*/
-/* Практическая работа №01 (мигание светодиодами) */
-/*------------------------------------------------*/
+/*-----------------------------------------------*/
+/* Практическая работа 01 (мигание светодиодами) */
+/*-----------------------------------------------*/
 
-/* Описание структуры порта */
+/* Определение структуры порта */
 typedef struct {
-  unsigned RXTX;
-  unsigned OE;
-  unsigned FUNC;
-  unsigned DIGITAL;
-  unsigned PULL;
-  unsigned PD;
-  unsigned PWR;
-  unsigned GFEN;
+    unsigned RXTX;
+    unsigned OE;
+    unsigned FUNC;
+    unsigned DIGITAL;
+    unsigned PULL;
+    unsigned PD;
+    unsigned PWR;
+    unsigned GFEN;
 }struct_ports;
 
-/* Описание функции задержки времени */
+/* Определение функции задержки времени */
 void delay(unsigned count){
-  while(count--);
+    while(count--);
 }
 
 int main (void) {
@@ -98,21 +98,24 @@ int main (void) {
     F->PWR     = 0xFFFF;     /* Фронт ~10 нс         */
     F->GFEN    = 0x0000;     /* Фильтрация отключена */
 
-    F->RXTX = 0x01;
+    F->RXTX = 0x01; /* 0-й бит включен, остальные выключены */
     while(1){
-        F->RXTX ^= 0x03; /* Меняет состояние 0 бита */
-        delay(300000);
+        F->RXTX ^= 0x03; /* 0 и 1 биты меняют состояния */
+        delay(1000000);
     }
-    
+
     return 0;
 }
 {% endhighlight %}
 
 <h4>Задания для самостоятельного выполнения</h4>
-1. Добейтесь, что бы мигал только один из светодиодов.
-2. Теперь добейтесь, что бы мигал только один, но не тот, что при выполнении первого задания.
-3. Необходимо, что бы один из светодиодов мигал в два раза реже, чем другой.
-
+1. Добейтесь, чтобы мигал только один из светодиодов.
+2. Добейтесь, чтобы мигал только один, но не тот, что при выполнении первого задания.
+3. Добейтесь, чтобы один из светодиодов мигал в два раза реже, чем другой.
+4. Добейтесь, чтобы два светодиода мигали одновременно.
+5. Добейтесь, чтобы светодиоды плавно увеличивали частоту мигания, а затем снижали частоту мигания.
+6. Добейтесь, чтобы светодиоды не мигали, а тускло светили (частота мигания должна быть такой большой, что бы человек не замечал этого, для человека будет казаться снижение интенсивности свечения).
+7. Добейтесь плавного циклического увеличения, а затем снижения яркости свечения светодиода.
 
 
 
