--- a/_posts/mc/2017-10-15-lab_01.md
+++ b/_posts/mc/2017-10-15-lab_01.md
@@ -1,12 +1,11 @@
 ---
 layout: post
-title: Практическая работа №01
+title: Практическая работа №01 (мигание светодиодами)
 author: Valentin Gubarev
 section: mc
 language: 'C/C++'
 ---
 
-<h3>Практическая работа №01 (мигание светодиодами)</h3>
 <p>Для выполнения практической работы потребуется отладочная плата
 <a href="/mc/files/1986EvBrd_48_Rev3.pdf">1986EvBrd_48_Rev3</a>.
 </p>
