--- a/_posts/mc/2017-10-28-lab_03.md
+++ b/_posts/mc/2017-10-28-lab_03.md
@@ -175,10 +175,10 @@ void ScreenUpdate(void){
 <h4>Задания для самостоятельного выполнения</h4>
 1. Нарисуйте окружность вписанную в квадрат.
 2. Добавьте функцию рисующую отрезки с заданными координатами концов отрезка.
-3. Нарисуйте треугольник использую функцию из предыдущего задания.
+3. Нарисуйте треугольник используя функцию из предыдущего задания.
 4. Нарисуйте домик с окном.
 5. Организуйте движение точки по дисплею.
-6. Организуйте эффект увеличичвающихся и уменьшающихся окружностей.
+6. Организуйте эффект увеличивающихся и уменьшающихся окружностей.
 7. Нарисуйте круг (не окружность).
 8. Выведите синусоиду.
 
