--- a/_posts/mc/2017-11-09-lab_04.md
+++ b/_posts/mc/2017-11-09-lab_04.md
@@ -11,7 +11,7 @@ language: 'C/C++'
 </p>
 <p>В этой практической работе дан пример реализации опроса кнопок
 находящихся на отладочной плате. При нажатии на кнопки курсора
-по экрану в соответствующих направленияъ будет перемещаться точка.
+по экрану в соответствующих направлениях будет перемещаться точка.
 А также в верхней части экрана организована бегущая строка.
 </p>
 <p>Проект аналогичен тому, что использовался в практической работе №03. Изменился файл
